css/style.css
html {
	font-size: 62.5%;
	scroll-behavior: smooth;
}
body {
	font-size: 1.6rem;
	font-family: 'Roboto', sans-serif;
	color: #ffffff;
}

/* nav */

.center-container {
	width: 95vw;
	margin: 0 auto;
}

.navbar {
	background-color: #4e4e4e;
}

.container-navbar {
	min-height: 50px;
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.company-name,
.nav-link {
	font-weight: bold;
	font-size: 1.8rem;
}

.nav-links {
	display: none;
}

/* header */

.header-img {
	position: relative;
	width: 100vw;
	height: calc(100vh - 50px);
	background-image: url(../img/header-lego-img1.jpg);
	background-size: cover;
}
.header-shadow {
	position: absolute;
	width: 100%;
	height: 100%;
	background-color: #00000035;
	z-index: -1;
}

.header-text {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: flex-start;
	gap: 48px;
	height: 100vh;
	margin: 0 auto;
	font-size: 18px;
	font-weight: bold;
}
.header-title {
	font-size: 36px;
	line-height: 42.19px;
}
.header-btn {
	height: 40px;
	width: 164px;
	border: 3px solid #ffffff;
	color: #ffffff;
	text-align: center;
	line-height: 36px;
	text-decoration: none;
	transition: 1s;
}

/* aboutUs */

.aboutUs {
	background-color: #f1f1f1;
}

.section-title {
	display: flex;
	justify-content: center;
	padding: 60px 0;
	color: #152d41;
	font-size: 36px;
	font-weight: bold;
}

.section-employees {
	display: flex;
	flex-direction: column;
	gap: 50px;
	padding-bottom: 100px;
}

.employee-box {
	display: flex;
	flex-direction: column;
	justify-content: space-around;
	align-items: center;
	gap: 50px;
}

.employee-box__image {
	height: 197px;
	width: 197px;
	background-color: #907d7d;
	border-radius: 50%;
	background-position: center;
	background-size: cover;
	flex-shrink: 0;
}
.employee-box__text {
	font-size: 18px;
	color: #000000;
}

.employee-box__text--name {
	font-weight: bold;
	padding-bottom: 16px;
}

.employee-box__image--one {
	background-image: url(../img/emp2.jpg);
}
.employee-box__image--two {
	background-image: url(../img/emp1.jpg);
}

/* offer */

.offer {
	background-color: #405d78;
}

.offer-title {
	color: #ffffff;
	font-size: 26px;
}

.services {
	display: grid;
	grid-template-columns: 1fr;
	justify-content: center;
	justify-items: center;
	gap: 35px;
	padding-bottom: 45px;
}

.service-box {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	height: 340px;
	width: 332px;
	background-color: #f1f1f1;
	color: #000000;
	transition: 0.5s;
}

.service-name {
	font-size: 24px;
}

.service-box-one {
	position: relative;
}

.service-circle {
	position: absolute;
	height: 22px;
	width: 22px;
	top: -11px;
	left: -11px;
	border-radius: 50%;
	background-color: #e07a64;
}

/* footer */

.footer {
	background-color: #4e4e4e;
}

.center-container-footer {
	display: flex;
	flex-direction: column;
	gap: 15px;
	width: 95vw;
	margin: auto;
	padding: 4rem 0;
	background-color: #4e4e4e;
	font-size: 18px;
	font-weight: bold;
	text-align: center;
}

.fa-brands {
	font-size: 31px;
	padding: 9px;
}

@media (min-width: 768px) {
	.nav-links {
		display: flex;
		gap: 4.6rem;
	}

	.nav-link {
		color: #ffffff;
		text-decoration: none;
		font-weight: normal;
	}

	.disabled-link {
		cursor: not-allowed;
	}
	.header-btn:hover {
		color: #000000;
		background-color: #ffffff;
	}

	.offer-title {
		font-size: 36px;
	}

	.section-employees {
		gap: 20px;
		padding-bottom: 50px;
	}

	.employee-box {
		flex-direction: row;
	}

	.employee-box:nth-of-type(even) {
		flex-direction: row-reverse;
	}

	.services {
		grid-template-columns: 1fr 1fr;
		grid-template-rows: 1fr 1fr 1fr;
		gap: 35px;
	}

	.service-box {
		height: 250px;
		width: 242px;
		transition: 0.5s;
	}

	.service-box:hover {
		transform: scale(1.05);
	}

	.center-container-footer {
		padding: 2rem 0;
	}
}

@media (min-width: 992px) {
	.center-container {
		width: 960px;
	}

	.section-title {
		justify-content: flex-start;
	}

	.services {
		grid-template-columns: 1fr 1fr 1fr;
		grid-template-rows: 1fr 1fr;
		gap: 62px;
		width: 720px;
		margin: 0 auto;
	}
	.service-box {
		height: 198px;
		width: 194px;
		transition: 0.5s;
		cursor: pointer;
	}

	.center-container-footer {
		flex-direction: row;
		justify-content: space-between;
		align-items: center;
		width: 960px;
		padding: 0;
	}
	.fa-brands {
		cursor: pointer;
	}
}

